# Playto

./: .gitignore  EXPLAINER.md  README.md  docker-compose.yml  railway.json
backend/: .env.example  .gitignore  Dockerfile  build.sh  pyproject.toml  requirements.txt
backend/config/: settings.py
backend/feed/: admin.py  authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/feed/migrations/: 0001_initial.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Comment.jsx  Feed.jsx  Header.jsx  Leaderboard.jsx  Login.jsx  PostDetail.jsx  Register.jsx
